minor changes in the header and profile photos

--- a/en/academics.html
+++ b/en/academics.html
@@ -61,8 +61,8 @@ FACEBOOK: https://www.facebook.com/themefisher
     
   <div class="body-inner">
 
-
-    <div id="top-bar" class="top-bar bg-white">
+    
+    <div id="top-bar" class="top-bar bg-white p-0 m-0" style="height:0px;">
         <div class="container p-0 m-0">
             <!--
           <h4 class="text-center">University of Applied Vēdic Sciences</h4>
@@ -465,7 +465,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <h4>B. Certification Course in Vēdas and Shāstrās</h4>
   
           <p class="pt-4">
-            In case of you were not able to complete the Doctorate / Ph.D program in 
+            In case of you were not able to complete the Doctorate / Ph.D. program in 
             Applied Vedic Sciences but you have completed minimum credits of 48 to 81 based on the 
             type of course you have selected, you can earn <b>Certificate Course in Vēdas and Shāstrās</b>.</p>
         </li>
