--- a/en/profiles/subbarao-koduri.html
+++ b/en/profiles/subbarao-koduri.html
@@ -237,8 +237,8 @@ FACEBOOK: https://www.facebook.com/themefisher
           He is popular as <b>Sumnarthi</b> in Arya Samaj network.
         </p>
       <p>
-        Dr. Koduri Subbarao has started <b>Gayatri Ashrama Trust</b> in 1990 and donated his personal funds for 
-        this trust to help <b>Gurukula Students and for Vydika Publications</b>. 
+        Dr. Koduri Subbarao has established <b>Gayatri Ashrama Trust</b> in 1990 and has been donating his personal funds to 
+        this trust that helps <b>Gurukula Students and for Vydika Publications</b>. 
       </p>
       <p>
       Dr. Koduri is <b>well known and respected advisory leader in Arya Samaj, Sitaphalmandi</b>, a suburb of Secunderabad City in Telangana State, India. 
