--- a/en/profiles/subbarao-koduri.html
+++ b/en/profiles/subbarao-koduri.html
@@ -229,7 +229,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           Dr. Koduri Subbarao was born in 1942 and his parents were Smt. Nagaratnamma and Sri. Venktraju. 
         </p>
         <p>
-          Dr. Koduri Subbarao earned his <b>Medical Degree in Homeopathy</b> to serve people.
+          Dr. Koduri Subbarao is an active <b>Health Care Provider in Homeopathy</b> to serve people.
         </p>
         <p>  
           Dr. Koduri Subbarao has highly influenced by Mahashi Dayanand Saraswathi’s popular book <b>Satyarth Prakash</b>. 
