--- a/en/profiles/venkata-chaganti.html
+++ b/en/profiles/venkata-chaganti.html
@@ -283,7 +283,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
         <p>
           
-          Dr. Venkata Chaganti is the President for <a class="a_underline" href="www.vedas.wiki" target="nw">Vēdas Wiki</a>, a non-profit organization. 
+          Dr. Venkata Chaganti is the President of <a class="a_underline" href="www.vedas.wiki" target="nw">Vēdas Wiki</a> Organization. 
           He prepared more than 10 million research works from a single Rigveda Mantra that projects and 
           extracts data from other Rigvēda Mantras. This is an extensive work that can be used to find the 
           properties of Agni, Surya, Vidyut, Ishwar, Vayu, Indra, Yajna, etc., that can be used in 
