--- a/en/courses/vedas.html
+++ b/en/courses/vedas.html
@@ -160,12 +160,13 @@ FACEBOOK: https://www.facebook.com/themefisher
     <div class="container">
         <div class="row">
           <div class="col-lg-12">
-              <nav class="navbar navbar-expand-lg navbar-dark p-0">
+              <nav class="navbar navbar-expand-lg navbar-dark p-0" >
+               
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
-                <div id="navbar-collapse" class="collapse navbar-collapse">
+                <div id="navbar-collapse" class="collapse navbar-collapse">                  
                     <ul class="nav navbar-nav mr-auto">
                       <li class="nav-item">
                         <a class="nav-link smoth-scroll" href="/en/index.html">Home</a>
@@ -185,7 +186,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       <li class="nav-item">
                         <a class="nav-link smoth-scroll" href="/en/contact.html">Contact</a>
                       </li>
-                    </ul>
+                    </ul>                  
                 </div>
               </nav>
           </div>
@@ -331,10 +332,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                     Yajur Vēda contains 40 Adyayas and 1,975 Mantras. <br/>
                     Yajur Vēda contains Karma Kanda. <br/>
                     Yajur Vēda Mantras have Rishi, Devatha, Chanddass and Swara. <br/>
-                    Yajur Vēda describes every act that humans must follow. Also it describes government, 
-                    dharma, yagna, getting education from Vēdas, how to win over enemies in the war, 
-                    how to use agni and such materials in vehicles, how to live more than 300 years, 
-                    medicine, mathematics, construction of buildings, what food should be taken, description of God, final rituals etcetera.             
+                    Yajur Vēda describes every act that humans must follow. Also it describes - 
+                    what food should be taken, description of God, final rituals etcetera.             
                 </p>     
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -366,8 +365,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                     (2) Deva Darsana which contains Physical world knowledge. (3) Brahma Vēda contains Brahma Gynana. 
                     (4) Jalad contains knowledge about water (5) Jajvali contains knowledge about Agni 
                     (6) Shounaka contains about Brahma (7) Modha contains knowledge about how to increase mind and 
-                    life of a person. (8) Pipalad contains the duties of jeeva and Brahma (9) Tantra contains 
-                    knowledge about electricity, scientific activities, chemical, air, water, poison, artillery etcetera.          
+                    life of a person. (8) Pipalad contains the duties of jeeva and Brahma.          
                 </p>   
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -386,8 +384,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="col-lg-4 col-md-6 footer-widget footer-about align-items-center text-center">
             <h3 class="widget-title text-left">Our University</h3>
             <img loading="lazy" width="200px" class="footer-logo  align-middle" src="/assets/images/logo-white.png" alt="university of Vedic Sciences">
-            <p class="text-white">University of Applied Vēdic Sciences (online) is a research-oriented academic 
-              organization with emphasis on outcome-driven real-world projects extracted from Vēdas and Shāstrās.</p>
+            <p class="text-white">University of Applied Vēdic Sciences (online) knowledge extracted from Vēdas and Shāstrās.</p>
             <div class="footer-social">
               <!--
               <ul>
