--- a/en/profiles/venkata-chaganti.html
+++ b/en/profiles/venkata-chaganti.html
@@ -160,12 +160,13 @@ FACEBOOK: https://www.facebook.com/themefisher
     <div class="container">
         <div class="row">
           <div class="col-lg-12">
-              <nav class="navbar navbar-expand-lg navbar-dark p-0">
+              <nav class="navbar navbar-expand-lg navbar-dark p-0" >
+               
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
-                <div id="navbar-collapse" class="collapse navbar-collapse">
+                <div id="navbar-collapse" class="collapse navbar-collapse">                  
                     <ul class="nav navbar-nav mr-auto">
                       <li class="nav-item">
                         <a class="nav-link smoth-scroll" href="/en/index.html">Home</a>
@@ -185,7 +186,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       <li class="nav-item">
                         <a class="nav-link smoth-scroll" href="/en/contact.html">Contact</a>
                       </li>
-                    </ul>
+                    </ul>                  
                 </div>
               </nav>
           </div>
@@ -224,7 +225,6 @@ FACEBOOK: https://www.facebook.com/themefisher
       Ph.D. in Physics, Georgia State University, Atlanta, Georgia, USA: 2009 -2015 <br/>
       M.S.: The University of Texas at El Paso, El Paso, Texas, USA: 2008 – 2009  <br/>
       B.S.: Bachelor of Engineering, Osmania University, Hyderabad, India. 1983 – 1988
-
     </p>
     <div class="row">      
       <div class="col-lg-6 col-md-4">
@@ -580,8 +580,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="col-lg-4 col-md-6 footer-widget footer-about align-items-center text-center">
             <h3 class="widget-title text-left">Our University</h3>
             <img loading="lazy" width="200px" class="footer-logo  align-middle" src="/assets/images/logo-white.png" alt="university of Vedic Sciences">
-            <p class="text-white">University of Applied Vēdic Sciences (online) is a research-oriented academic 
-              organization with emphasis on outcome-driven real-world projects extracted from Vēdas and Shāstrās.</p>
+            <p class="text-white">University of Applied Vēdic Sciences (online) knowledge extracted from Vēdas and Shāstrās.</p>
             <div class="footer-social">
               <!--
               <ul>
