--- a/en/academics.html
+++ b/en/academics.html
@@ -293,6 +293,11 @@ FACEBOOK: https://www.facebook.com/themefisher
           (21) <a class="course" href="/en/courses/literature.html#L-21">Manu Smruthi (L-21)</a>  <br/>
           (22) <a class="course" href="/en/courses/literature.html#L-22">Bhavad Geetha (L-22)</a> 
         </li>
+
+        <li class="list-inline-item pb-4 align-top">
+          <label class="font-weight-bold text-primary">Upavedas (4)</label> <br/>
+          (1) <a class="course" href="/en/courses/upavedas.html">Upavedas (4)</a>  
+        </li>
        
     </ul>   
   </div>
