--- a/en/faculty.html
+++ b/en/faculty.html
@@ -240,7 +240,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <li class="list-inline-item"><a href="#!"><i class="fab fa-google-plus"></i></a></li>
           </ul>
           -->
-          <a href="/en/profiles/venkata-chaganti.html"><h4 class="mt-3">Dr. Venakta Ramana Chaganti</h4></a>
+          <a href="/en/profiles/venkata-chaganti.html"><h4 class="mt-3">Dr. Venkata Ramana Chaganti</h4></a>
           <p class="mb-0">Founder and Vēdic Scholar <br/>
             <a class="a_underline" href="/en/profiles/venkata-chaganti.html">profile page</a></p>
   
