added public notices

--- a/en/public_notices.html
+++ b/en/public_notices.html
@@ -26,7 +26,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   <!-- Basic Page Needs
 ================================================== -->
   <meta charset="utf-8">
-  <title>Home - University of Applied Vēdic Sciences</title>
+  <title>Privacy Policy - University of Applied Vēdic Sciences</title>
 
   <!-- Mobile Specific Metas
 ================================================== -->
@@ -215,55 +215,49 @@ FACEBOOK: https://www.facebook.com/themefisher
 </header>
 <!--/ Header end -->
 
-
-<section class="section-padding bg-yellow text-black">
-    <div class="container pb-4 text-black">
-      <h3 class="text-black">
-
-        तस्मा॑द्य॒ज्ञात्स॑र्व॒हुत॒ ऋचः॒ सामा॑नि जज्ञिरे ।  <br/><br/>
-        छन्दां॑सि जज्ञिरे॒ तस्मा॒द्यजु॒स्तस्मा॑दजायत ॥९॥ <br/><br/>
-    </h3>
-  <p>
-    The one who has no death, who is ever knowledgeable,
-    who does not have even an iota of ignorance, who is always in bliss,
-    is called Sarvahuth (सर्वहुत). That means <b>&quot;He is the one&quot;</b> with all capabilities.
-    From such a Parabrahma (परब्रह्मन्), the Vedas - Rigvēda, Samavēda were born.
-    From that Parabrahma, Atharvavēda was born.
-    From that Parabrahma Yajurvēda was born.
-
-      <br/>
-      <b>Rigvēda (10.90.9)</b>
-    </p>
-    </div>
-  </section>
-
-  <section id="intro" class="section-padding">
+<section class="section-padding">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12 col-sm-12 col-md-12">
-          <div class="section-heading2">
-            <h3>Start your University of Applied Vēdic Sciences (Online) Jounrney Today!</h3>
-              <p class="pt-4">
-                Building a global online community for applying vēdic concepts to bring innovation in our learning.</p>
-              <p><a href="contact.html" class="btn btn-primary btn-circled">Apply Now</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12 col-sm-12 col-md-12">
-          <div>
-            <br/><br/>
-            <h4> Public Notices</h4>
-            <p>
-              <a href="public_notices.html" class="btn btn-primary btn-circled">Read Public Notices</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="cont">
+                    <h4 class="my-3">University of Applied Vēdic Sciences (Online)</h4>
+                    <h3 class="my-3">Required Public Notices:</h3>
+                    <br/>
+                </div>
 
-  <!--  ABOUT AREA END  -->
+                <h4>1. Exemption Statement:</h4>
+                <p>
+                    Degree programs of study offered by “University of Applied Vedic Sciences”
+                    have been declared exempt from the requirements for licensure, under provisions of North Carolina
+                    General Statutes Section (G.S.) 116-15 (d) for exemption from licensure with respect to religious education.
+                    Exemption from licensure is not based upon assessment of program quality under established licensing standards.
+                </p>
+                <h4>2. Student Complaints:</h4>
+                <p>
+                    The Licensure Division of the University of North Carolina General Administration serves as the official
+                    state entity to receive complaints concerning post-secondary institutions that are authorized to
+                    operate in North Carolina.
+                </p>
+                <p>
+                    If students are unable to resolve a complaint through the institution’s grievance procedures,
+                    they can review the Student Complaint Policy (PDF) and submit their complaint using the
+                    online complaint form at
+                    <a href='https://studentcomplaints.northcarolina.edu/form'>
+                        https://studentcomplaints.northcarolina.edu/form
+                    </a>
+                </p>
+                <p>
+                    or to the following mailing address: <br/> <br/>
+                    <b>North Carolina Post-Secondary Education Complaints</b> <br/>
+                    c/o Student Complaints <br/>
+                    <b>University of North Carolina System Office</b> <br/>
+                    223 S. West Street, Suite 1800, Raleigh, NC  27603 <br/>
+
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
   <footer id="footer" class="footer bg-overlay">
     <div class="footer-main">
