--- a/en/about.html
+++ b/en/about.html
@@ -351,6 +351,14 @@ FACEBOOK: https://www.facebook.com/themefisher
      
      <h3 id="authority" class="pb-4">Authority to Operate</h3>
  
+     <h4>Exemption Statement:</h4>
+     <p>
+         Degree programs of study offered by “University of Applied Vedic Sciences”
+         have been declared exempt from the requirements for licensure, under provisions of North Carolina
+         General Statutes Section (G.S.) 116-15 (d) for exemption from licensure with respect to religious education.
+         Exemption from licensure is not based upon assessment of program quality under established licensing standards.
+     </p>
+     
      <h4 class="pb-4">Vēdic Authority</h4>
      <div class="row align-items-center">     
        <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
