--- a/en/public_notices.html
+++ b/en/public_notices.html
@@ -233,27 +233,31 @@ FACEBOOK: https://www.facebook.com/themefisher
                     Exemption from licensure is not based upon assessment of program quality under established licensing standards.
                 </p>
                 <h4>2. Student Complaints:</h4>
-                <p>
-                    The Licensure Division of the University of North Carolina General Administration serves as the official
-                    state entity to receive complaints concerning post-secondary institutions that are authorized to
-                    operate in North Carolina.
+                <p>The State Authorization Unit of the University of North Carolina System Office serves 
+                    as the official state entity to receive complaints concerning post-secondary institutions 
+                    that are authorized to operate in North Carolina. If students are unable to resolve a 
+                    complaint through the institution’s grievance procedures, they can review the Student 
+                    Complaint Policy (PDF) and submit their complaint using the online complaint form at 
+                    <a href='https://studentcomplaints.northcarolina.edu/form'>https://studentcomplaints.northcarolina.edu/form</a>.
                 </p>
-                <p>
-                    If students are unable to resolve a complaint through the institution’s grievance procedures,
-                    they can review the Student Complaint Policy (PDF) and submit their complaint using the
-                    online complaint form at
-                    <a href='https://studentcomplaints.northcarolina.edu/form'>
-                        https://studentcomplaints.northcarolina.edu/form
-                    </a>
-                </p>
-                <p>
-                    or to the following mailing address: <br/> <br/>
-                    <b>North Carolina Post-Secondary Education Complaints</b> <br/>
-                    c/o Student Complaints <br/>
-                    <b>University of North Carolina System Office</b> <br/>
-                    223 S. West Street, Suite 1800, Raleigh, NC  27603 <br/>
 
-                </p>
+                <p>
+                    For more information contact: <br/><br/>
+
+                    North Carolina Post-Secondary Education Complaints<br/>
+                    223 S. West Street, Suite 1800 <br/>
+                    Raleigh, NC 27603 <br/>
+                    (919) 962-4550 <br/>
+                    </p>
+
+                    <p>
+                        To file a complaint with the Consumer Protection Division of the North Carolina Department of Justice, please visit The State Attorney General’s web page at: http://www.ncdoj.gov/complaint. North Carolina residents may call (877) 566-7226. Outside of North Carolina, please call (919) 716-6000. En Espanol (919) 716-0058. If you choose to mail a complaint, please use the following address:
+                        <br/><br/>
+                        Consumer Protection Division <br/>
+                        Attorney General’s Office <br/>
+                        Mail Service Center 9001 <br/>
+                        Raleigh, NC 27699-9001 <br/>
+                    </p>
             </div>
         </div>
     </div>
