added google form

--- a/en/index.html
+++ b/en/index.html
@@ -232,7 +232,7 @@ FACEBOOK: https://www.facebook.com/themefisher
     From that Parabrahma Yajurvēda was born.
 
       <br/>
-      <b>Rigvēda (10.90.9)</b>
+      <b>Rigvēda (10-90-9)</b>
     </p>
     </div>
   </section>
@@ -245,7 +245,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <h3>Start your University of Applied Vēdic Sciences (Online) Jounrney Today!</h3>
               <p class="pt-4">
                 Building a global online community for applying vēdic concepts to bring innovation in our learning.</p>
-              <p><a href="contact.html" class="btn btn-primary btn-circled">Apply Now</a></p>
+              <p><a target="_form" href="https://docs.google.com/forms/d/e/1FAIpQLScL3Q6yiNED2v-SM87FzJiNIL20WIKk7Qwod2ODUYs6dWhJpw/viewform" class="btn btn-primary btn-circled">Apply Now</a></p>
           </div>
         </div>
       </div>
