added email to header

--- a/en/courses/software-courses.html
+++ b/en/courses/software-courses.html
@@ -26,7 +26,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   <!-- Basic Page Needs
 ================================================== -->
   <meta charset="utf-8">
-  <title>Privacy Policy - University of Applied Vēdic Sciences</title>
+  <title>Academics - Software Awareness Courses - University of Applied Vēdic Sciences</title>
 
   <!-- Mobile Specific Metas
 ================================================== -->
@@ -216,51 +216,51 @@ FACEBOOK: https://www.facebook.com/themefisher
 </header>
 <!--/ Header end -->
 
-<section class="section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="cont">
-                    <h4 class="my-3">University of Applied Vēdic Sciences (Online)</h4>
-                    <h3 class="my-3">Required Public Notices:</h3>
-                    <br/>
-                </div>
-
-                <h4>1. Exemption Statement:</h4>
-                <p>
-                    Degree programs of study offered by “University of Applied Vedic Sciences”
-                    have been declared exempt from the requirements for licensure, under provisions of North Carolina
-                    General Statutes Section (G.S.) 116-15 (d) for exemption from licensure with respect to religious education.
-                    Exemption from licensure is not based upon assessment of program quality under established licensing standards.
-                </p>
-                <h4>2. Student Complaints:</h4>
-                <p>The State Authorization Unit of the University of North Carolina System Office serves 
-                    as the official state entity to receive complaints concerning post-secondary institutions 
-                    that are authorized to operate in North Carolina. If students are unable to resolve a 
-                    complaint through the institution’s grievance procedures, they can review the Student 
-                    Complaint Policy (PDF) and submit their complaint using the online complaint form at 
-                    <a href='https://studentcomplaints.northcarolina.edu/form'>https://studentcomplaints.northcarolina.edu/form</a>.
-                </p>
-
-                <p>
-                    For more information contact: <br/><br/>
-
-                    North Carolina Post-Secondary Education Complaints<br/>
-                    223 S. West Street, Suite 1800 <br/>
-                    Raleigh, NC 27603 <br/>
-                    (919) 962-4550 <br/>
-                    </p>
-
-                    <p>
-                        To file a complaint with the Consumer Protection Division of the North Carolina Department of Justice, please visit The State Attorney General’s web page at: http://www.ncdoj.gov/complaint. North Carolina residents may call (877) 566-7226. Outside of North Carolina, please call (919) 716-6000. En Espanol (919) 716-0058. If you choose to mail a complaint, please use the following address:
-                        <br/><br/>
-                        Consumer Protection Division <br/>
-                        Attorney General’s Office <br/>
-                        Mail Service Center 9001 <br/>
-                        Raleigh, NC 27699-9001 <br/>
-                    </p>
-            </div>
+<div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
+<section class="pt-4">
+    <div class="container pt-4">
+        <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
         </div>
+        <h3 class="pt-4 pb-4">Software Awareness Courses (4)</h3>
+        <ul>
+            <li>
+                <h4  id="S-01" class="text-primary">1. Microsoft Office (Word, Excel, Powerpoint) (S-01)</h4>
+                <p>                   
+                </p>     
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>           
+            </li>
+
+            <li>
+                <h4  id="S-02" class="text-primary">2. Google Cloud Office (Doc, Spreadsheet, Presentation) (S-02)</h4>
+                <p>                   
+                </p>  
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>              
+            </li>
+
+            <li>
+                <h4  id="S-03" class="text-primary">3. Documentation Tool LaTex (S-03)</h4>
+                <p>                   
+                </p>  
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>              
+            </li>
+
+            <li>
+                <h4  id="S-04" class="text-primary">4. Python Programming (S-04)</h4>
+                <p>                   
+                </p>  
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>              
+            </li>
+        </ul>
+
     </div>
 </section>
 
@@ -373,3 +373,4 @@ FACEBOOK: https://www.facebook.com/themefisher
   </body>
 
   </html>
+   
