added student agreement to footer

--- a/en/courses/upanishads.html
+++ b/en/courses/upanishads.html
@@ -426,10 +426,11 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
             <h3 class="widget-title">Links</h3>
             <ul class="list-arrow">
-              <li><a class="text-white" href="/en/profiles/venkata-chaganti.html">Founder</a></li>      
-              <li><a class="text-white" href="/en/advisory.html">Board Members</a></li>   
+              <li><a class="text-white" href="/en/profiles/venkata-chaganti.html">Founder</a></li>
+              <li><a class="text-white" href="/en/advisory.html">Board Members</a></li>
               <li><a class="text-white" href="/en/privacy.html">Privacy Policy</a></li>
-              <li><a  class="text-white" href="/en/terms.html">Terms & Conditions</a></li> 
+              <li><a  class="text-white" href="/en/terms.html">Terms & Conditions</a></li>
+              <li><a  class="text-white" href="/en/agreement.html">Student Agreement</a></li>
             </ul>
           </div><!-- Col end -->
         </div><!-- Row end -->
