--- a/en/agreement.html
+++ b/en/agreement.html
@@ -222,112 +222,104 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 <section class="section-padding">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="cont">
-                    <h4 class="my-3">University of Applied Vēdic Sciences (Online)</h4>
-                    <h4 class="my-3">Student Agreement / Non-Disclosure Agreement (NDA)</h4>
-                    <p>
-                        This Student Agreement ("Agreement") is entered into between the University of
-                        Applied Vedic Sciences ("University") and the student ("Student") who enrolls
-                        in the Certificate Course/Ph.D. program.
-                    </p>
-                    <h4 class="my-3">Gmail Account Requirement</h4>
-                    <p>
-                        Every student is required to have a Gmail account for communication purposes with the University.
-                    </p>
+      <div class="row">
+        <div class="col-lg-8">
+            <div class="cont">
+                <h4 class="my-3">University of Applied Vēdic Sciences (Online)</h4>
+                <h4 class="my-3">Student Agreement / Non-Disclosure Agreement (NDA)</h4>
+                <p>
+                    This Student Agreement ("Agreement") is entered into between the University of
+                    Applied Vedic Sciences ("University") and the student ("Student") who enrolls
+                    in the Certificate Course/Ph.D. program.
+                </p>
+                <h4 class="my-3">Gmail Account Requirement</h4>
+                <p>
+                    Each student must maintain a Gmail account to facilitate communication and the exchange of course materials with the University.
+                </p>
 
-                    <h4 class="my-3">Non-Disclosure of Study Materials</h4>
-                    <p>
-                        Study materials, including videos, documents, audios, and any other forms of content shared by the University,
-                        must not be shared with anyone else. Sharing of materials may result in disciplinary action.
-                    </p>
+                <h4 class="my-3">Non-Disclosure of Study Materials</h4>
+                <p>
+                    Study materials, including videos, documents, audios, and any other forms of content shared by the University,
+                    must not be shared with anyone else. Sharing of materials may result in disciplinary action.
+                </p>
 
-                    <h4 class="my-3">Email Password Security</h4>
-                    <p>
-                        Students must not share their email passwords with anyone.
-                        Your email account is your responsibility, and you are solely responsible for its security.
-                    </p>
+                <h4 class="my-3">Email Password Security</h4>
+                <p>
+                    Students must not share their email passwords with anyone.
+                    Your email account is your responsibility, and you are solely responsible for its security.
+                </p>
 
-                    <h4 class="my-3">Course Intent</h4>
-                    <p>
-                        The Certificate Course/Ph.D. is intended for learning courses that
-                        are specified in the Student Handbook provided by the University.
-                    </p>
+                <h4 class="my-3">Course Intent</h4>
+                <p>
+                    The Certificate Course/Ph.D. is intended for learning courses that
+                    are specified in the Student Handbook provided by the University.
+                </p>
 
-                    <h4 class="my-3">Qualification for Additional Courses</h4>
-                    <p>
-                        Students who successfully complete the mandatory courses (Siksha and Ashthadhyayi)
-                        will be offered the opportunity to enroll in other courses.
-                    </p>
+                <h4 class="my-3">Qualification for Additional Courses</h4>
+                <p>
+                    Students who successfully complete the mandatory courses (Siksha and Ashthadhyayi)
+                    will be offered the opportunity to enroll in other courses.
+                </p>
 
-                    <h4 class="my-3">Course Availability</h4>
-                    <p>
-                        Courses are offered based on the availability of faculty and study materials.
-                        Therefore, not all courses may be available immediately.
-                    </p>
+                <h4 class="my-3">Course Availability</h4>
+                <p>
+                    Courses are offered based on the availability of faculty and study materials.
+                    Therefore, not all courses may be available immediately.
+                </p>
 
-                    <h4 class="my-3">Study Material Access</h4>
-                    <p>
-                        Course materials are made available based on tuition fee payments. If the University offers installment payment options,
-                        study materials will be released incrementally after each installment is paid.
-                    </p>
+                <h4 class="my-3">Study Material Access</h4>
+                <p>
+                    Course materials are made available based on tuition fee payments, and students
+                    should also complete the due assignments along with fee payments to continue.
+                    If the University offers installment payment options,
+                    study materials will be released incrementally after each installment is paid.
+                </p>
 
-                    <h4 class="my-3">Examination and Assessment</h4>
-                    <p>
-                        After completing periodic assignments and exams, there will be a final exam,
-                        which may consist of both written and oral components.
-                    </p>
+                <h4 class="my-3">Examination and Assessment</h4>
+                <p>
+                    After completing periodic assignments and exams, there will be a final exam,
+                    which may consist of both written and oral components.
+                </p>
 
-                    <h4 class="my-3">Online Assignments and Exams</h4>
-                    <p>
-                        Assignments and exams will be conducted online. The oral interview may take place through
-                        online conferencing or at a location where the student, instructor, and panel can meet.
-                    </p>
+                <h4 class="my-3">Online Assignments and Exams</h4>
+                <p>
+                    Assignments and exams will be conducted online. The oral interview may take place through
+                    online conferencing or at a location where the student, instructor, and panel can meet.
+                </p>
 
-                    <h4 class="my-3">Participation in Online Discussions</h4>
-                    <p>
-                        If the University provides an online discussion board, students are required to actively participate,
-                        share, and engage with other students as part of the learning process.
-                    </p>
+                <h4 class="my-3">Participation in Online Discussions</h4>
+                <p>
+                    If the University provides an online discussion board, students are required to actively participate,
+                    share, and engage with other students as part of the learning process.
+                </p>
 
-                    <h4 class="my-3">Time Limits</h4>
-                    <p>
-                        Sufficient time will be allocated for each course, and there will be specific time limits for course completion,
-                        periodic assignments/exams, and the final exam and oral interview.
-                    </p>
+                <h4 class="my-3">Time Limits</h4>
+                <p>
+                    Sufficient time will be allocated for each course, and there will be specific time limits for course completion,
+                    periodic assignments/exams, and the final exam and oral interview.
+                </p>
 
-                    <h4 class="my-3">NDA for Ph.D. Program</h4>
-                    <p>
-                        When entering the Ph.D. program after successfully completing the Certificate course,
-                        the student will be required to enter into a separate Non-Disclosure Agreement (NDA)
-                        and Intellectual Property Rights Agreement with the University of Applied Vedic Sciences.
-                    </p>
+                <h4 class="my-3">NDA for Ph.D. Program</h4>
+                <p>
+                    When entering the Ph.D. program after successfully completing the Certificate course,
+                    the student will be required to enter into a separate Non-Disclosure Agreement (NDA)
+                    and Intellectual Property Rights Agreement with the University of Applied Vedic Sciences.
+                </p>
 
-                    <p>
-                        By enrolling in the University's programs, the Student acknowledges and
-                        agrees to abide by the terms and conditions outlined in this Agreement.
-                        Violation of these terms may result in academic or legal consequences.
-                    </p>
-                    <p>
-                    <b>University of Applied Vedic Sciences</b> <br/>
-                    Signature: __________________________ Date: __________________________
-                    </p>
-                    <p>
-                    <b>Student</b> <br/>
-                    Signature: __________________________ Date: __________________________
-                    </p>
-                    <h4 class="text-white">Contact Information</h4>
-                    <p>
-                      University of Applied Vēdic Sciences welcomes your questions or comments regarding this Student Agreement Form.
-                       Please contact University of Applied Vedic Sciences at:
-                  </p>
+                <p>
+                    By enrolling in the University's programs, the Student acknowledges and
+                    agrees to abide by the terms and conditions outlined in this Agreement.
+                    Violation of these terms may result in academic or legal consequences.
+                </p>
 
-                    <p>Email: Support@Vedas.University</p>
+                <p>
+                <b>Student</b> <br/>
+                Signature: __________________________ Date: __________________________
+                </p>
 
-                </div> <!-- cont end -->
-            </div>
+            </div> <!-- cont end -->
         </div>
+    </div>
     </div>
 </section>
 
