fix zelle account

--- a/en/payment_center.html
+++ b/en/payment_center.html
@@ -251,7 +251,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <p>
                     <br/>
                     <b>(2) <u>Students from USA:</u></b> <br/>
-                    Please send payments through <b>Zelle Payment</b> to email address: <b>vuavs2023@gmail.com</b>.
+                    Please send payments through <b>Zelle Payment</b> to email address: <b>uavs2023@gmail.com</b>.
                 </p>
 
                 <p>
